<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_orderdetail"
    android:background="@color/color_shopbg">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:elevation="120dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imgView_loading_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:elevation="120dp"
        android:visibility="gone"
        android:src="@drawable/customview_loading_background" />

    <RelativeLayout
        android:id="@+id/layout_shopTitle"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:src="@mipmap/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/transaction_record"
            android:textColor="@color/dark_gray"
            android:textSize="18sp" />


        <ImageView
            android:id="@+id/iv_notify"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@mipmap/ic_notification"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tv_notifycount"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:background="@drawable/customborder_round_turquise"
            android:gravity="center"
            android:text="99"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:visibility="gone"/>
    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_shopTitle"
        android:layout_above="@id/bottom"
        android:layout_marginTop="24dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:elevation="10dp"
                android:outlineSpotShadowColor="@color/hkshop_color"
                android:background="@drawable/customborder_onboard_turquise_16dp">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/sponsor_finished"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="12dp"
                    android:layout_below="@id/tv_status"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sponsor_expiry_at"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/tv_expiry_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="12sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/due"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="。"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>


                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_hotsaleproduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:outlineSpotShadowColor="@color/hkshop_color"
                android:background="@drawable/customborder_onboard_16dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <LinearLayout
                    android:id="@+id/container_record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="12dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/iv_product_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/stored_value"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/hkd_dollarSign"
                                android:textColor="@color/black"
                                android:textSize="18dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_stored_value"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text=""
                                android:textColor="@color/black"
                                android:textSize="18dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="8dp"
                android:elevation="10dp"
                android:outlineSpotShadowColor="@color/hkshop_color"
                android:background="@drawable/customborder_onboard_16dp">

                <TextView
                    android:id="@+id/tv_store_name"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/payment_detail"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <View
                    android:id="@+id/v_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/tv_store_name"
                    android:layout_marginTop="12dp"
                    android:background="@color/colordivideline" />

                <TextView
                    android:id="@+id/tv_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/v_divider"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/sponsor_price"
                    android:textColor="@color/color_somegray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_subtotal_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/v_divider"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="12dp"
                    android:text=""
                    android:textSize="14sp"
                    android:textColor="@color/color_somegray"/>

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_subtotal_value"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/sum_price"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_subtotal_value"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="12dp"
                    android:text=""
                    android:textSize="14sp"
                    android:textColor="@color/turquoise"/>


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:orientation="vertical"
                android:elevation="10dp"
                android:layout_gravity="center_vertical"
                android:outlineSpotShadowColor="@color/hkshop_color"
                android:background="@drawable/customborder_onboard_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle=""
                        android:text="@string/sponsor_number"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:id="@+id/tv_sponsor_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text=""
                        android:textColor="@color/hkshop_color"
                        android:textSize="14sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_time"
                        android:textSize="14sp"
                        android:textColor="@color/bright_gray" />

                    <TextView
                        android:id="@+id/tv_pay_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text=""
                        android:textSize="14sp"
                        android:textColor="@color/bright_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finish_time"
                        android:textSize="14sp"
                        android:textColor="@color/bright_gray" />

                    <TextView
                        android:id="@+id/tv_finish_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:layout_weight="1"
                        android:text=""
                        android:textSize="14sp"
                        android:textColor="@color/bright_gray" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>